--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="fontawesome-free-6.2.0-web/css/all.css">
-    <title>Document</title>
+    <title>Gentle Gadgets</title>
 </head>
 
 <body>
